--- a/css/login-page.css
+++ b/css/login-page.css
@@ -115,7 +115,8 @@ input[type="reset"]:active {
   transform: scale(0.95);
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="password"] {
   background-color: #fdeedc;
   border: none;
   color: #e38b29;
