--- a/css/table.css
+++ b/css/table.css
@@ -1,3 +1,6 @@
+body {
+  background: #fdeedc;
+}
 a:focus {
   outline: none !important;
 }
@@ -51,7 +54,7 @@ iframe {
 .container-table100 {
   width: 100%;
   min-height: 100vh;
-  background: #fdeedc;
+  /* background: #fdeedc; */
   /* background: #c850c0;
   background: -webkit-linear-gradient(45deg, #4158d0, #c850c0);
   background: -o-linear-gradient(45deg, #4158d0, #c850c0);
@@ -66,6 +69,7 @@ iframe {
   justify-content: center;
   flex-wrap: wrap;
   padding: 33px 30px;
+  margin-top: 50px;
 }
 .wrap-table100 {
   width: 1170px;
